# docs/docs.swagger.json
@@ -16,8 +16,41 @@
     "application/json"
   ],
   "paths": {
+    "/api/account/{id}": {
+      "get": {
+        "summary": "// Информация об аккаунте",
+        "operationId": "ContactService_GetAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/contact_serviceGetAccountResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "ContactService"
+        ]
+      }
+    },
     "/api/account/{id}/contacts": {
       "get": {
+        "summary": "Список контактов в amoCRM",
         "operationId": "ContactService_ListContacts",
         "responses": {
           "200": {
@@ -54,6 +87,234 @@
             "required": false,
             "type": "integer",
             "format": "int32"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "sync",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "tags": [
+          "ContactService"
+        ]
+      }
+    },
+    "/api/account/{id}/contacts/hook": {
+      "post": {
+        "summary": "// Хук изменений контактов",
+        "operationId": "ContactService_ContactActionsHook",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "contacts": {
+                  "$ref": "#/definitions/ContactActionsHookRequestEmbedded"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "ContactService"
+        ]
+      }
+    },
+    "/api/account/{id}/contacts/hook/unsub": {
+      "get": {
+        "summary": "// Отписка учетной записи",
+        "operationId": "ContactService_UnsubAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "ContactService"
+        ]
+      }
+    },
+    "/api/account/{id}/contacts/sync": {
+      "post": {
+        "summary": "// Первичная интеграция контактов",
+        "operationId": "ContactService_PrimaryContactsSync",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "unisender_key": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "ContactService"
+        ]
+      }
+    },
+    "/api/account/{id}/integrations": {
+      "get": {
+        "summary": "// Список интеграций аккаунта",
+        "operationId": "ContactService_ListAccountIntegrations",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/contact_serviceListAccountIntegrationsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "ContactService"
+        ]
+      }
+    },
+    "/api/accounts": {
+      "get": {
+        "summary": "Список учетных записей",
+        "operationId": "ContactService_ListAccounts",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/contact_serviceListAccountsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "amo_auth",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "tags": [
@@ -121,17 +382,171 @@
     }
   },
   "definitions": {
-    "CustomFieldsValueValues": {
+    "AmoContactCustom_fields": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "values": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/AmoContactValues"
+          }
+        },
+        "code": {
+          "type": "string"
+        }
+      }
+    },
+    "AmoContactValues": {
       "type": "object",
       "properties": {
         "value": {
           "type": "string"
         },
-        "enum_id": {
+        "enum": {
+          "type": "string"
+        },
+        "code": {
+          "type": "string"
+        }
+      }
+    },
+    "ContactActionsHookRequestEmbedded": {
+      "type": "object",
+      "properties": {
+        "add": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/contact_serviceAmoContact"
+          }
+        },
+        "update": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/contact_serviceAmoContact"
+          }
+        },
+        "delete": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/contact_serviceAmoContact"
+          }
+        }
+      }
+    },
+    "contact_serviceAccount": {
+      "type": "object",
+      "properties": {
+        "id": {
           "type": "string",
           "format": "uint64"
         },
-        "enum_code": {
+        "subdomain": {
+          "type": "string"
+        },
+        "amo_auth": {
+          "type": "boolean"
+        },
+        "unisender_connected": {
+          "type": "boolean"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "contact_serviceAccountIntegration": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "outer_id": {
+          "type": "string"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "contact_serviceAmoContact": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "responsible_user_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "date_create": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "last_modified": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "created_user_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "modified_user_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "company_name": {
+          "type": "string"
+        },
+        "linked_company_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "account_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "custom_fields": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/AmoContactCustom_fields"
+          }
+        },
+        "created_at": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "type": {
           "type": "string"
         }
       }
@@ -143,75 +558,60 @@
           "type": "string",
           "format": "uint64"
         },
+        "account_id": {
+          "type": "string",
+          "format": "uint64"
+        },
         "name": {
           "type": "string"
         },
-        "first_name": {
+        "email": {
           "type": "string"
         },
-        "last_name": {
+        "type": {
           "type": "string"
         },
-        "responsible_user_id": {
-          "type": "string",
-          "format": "uint64"
+        "sync": {
+          "type": "boolean"
         },
         "created_at": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "created_by": {
           "type": "string",
           "format": "uint64"
         },
         "updated_at": {
           "type": "string",
           "format": "uint64"
-        },
-        "updated_by": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "is_deleted": {
-          "type": "boolean"
-        },
-        "is_unsorted": {
-          "type": "boolean"
-        },
-        "custom_field_values": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/contact_serviceCustomFieldsValue"
-          }
-        },
-        "account_id": {
-          "type": "string",
-          "format": "uint64"
         }
       }
     },
-    "contact_serviceCustomFieldsValue": {
+    "contact_serviceGetAccountResponse": {
       "type": "object",
       "properties": {
-        "field_id": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "field_name": {
-          "type": "string"
-        },
-        "field_code": {
-          "type": "string"
-        },
-        "field_type": {
-          "type": "string"
-        },
-        "values": {
+        "account": {
+          "$ref": "#/definitions/contact_serviceAccount"
+        }
+      }
+    },
+    "contact_serviceListAccountIntegrationsResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/CustomFieldsValueValues"
+            "$ref": "#/definitions/contact_serviceAccountIntegration"
+          }
+        }
+      }
+    },
+    "contact_serviceListAccountsResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/contact_serviceAccount"
           }
         }
       }
